[package]
name = "tect_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
tect_ui = { path = "../tect_ui", version = "0.1.0", default-features = false }
tect_world = { path = "../tect_world", version = "0.1.0", default-features = false }
tect_state = { path = "../tect_state", version = "0.1.0", default-features = false }

[lints]
workspace = true
